//
//  ToastData.swift
//  CIRASharedUI
//
//  Created by Roman Kovalchuk on 02.01.2026.
//

import Foundation

public enum ToastData: Equatable {
    case success(String)
    case error(String)
}
